Bug #823 - text align left on table head

--- a/app/styles/custom/custom.scss
+++ b/app/styles/custom/custom.scss
@@ -463,6 +463,11 @@ a.clear-btn, button.clear-btn {
 }
 
 .table {
+  thead {
+    th {
+      text-align: left;
+    }
+  }
   tbody {
     tr {
       td {
